# auction-hugo-backend

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20241226171133_create_notification_table.sql  20241226210111_create_productions_table.sql
src/: main.rs  save_image.rs  schema.rs  types.rs
src/auth/: auth.rs
src/types/: types.rs
