[package]
name = "auction-hugo-back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hyper = { version = "0.14", features = ["full", "server"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = "1.0"
serde_derive = "1.0"
tracing-subscriber = { version="0.3", features = ["env-filter"] }