[package]
name = "auction-hugo-back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "0.14", features = ["full", "server"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls","chrono", "time"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = "1.0"
serde_derive = "1.0"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde_json = "1.0.134"
chrono = { version = "0.4", features = ["serde"] }