[package]
name = "auction-hugo-back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros","multipart"] }
hyper = { version = "0.14", features = ["full", "server"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls","chrono", "time"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.74.0"
tracing = "0.1"
serde = "1.0"
serde_derive = "1.0"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde_json = "1.0.134"
chrono = { version = "0.4", features = ["serde"] }
webp = "0.2"
image = "0.24"
jsonwebtoken = "9"
dashmap = "5.4"